<resources>
    <string name="app_name">Mii</string>

    <!-- GLOBAL STRINGS -->
    <string name="menu">MENU</string>
    <string name="menu_mindspace">MINDSPACE</string>
    <string name="cancel_edit">CANCEL</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- LOGIN ACTIVITY   -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_header">Introduce yourSELF</string>

    <!-- SELF ACTIVITY STRING   -->
    <string name="title_activity_self">Self</string>
    <string name="sacred_name">Sacred Name</string>
    <string name="self_image">Self Image</string>
    <string name="self_image_hint">Enter a brief description of your self image</string>
    <string name="hobbies_interests">Hobbies + Interests</string>
    <string name="hobbies_interests_hint">Enter your hobbies + interests</string>
    <string name="hobbies_interests_placeholder">-</string>
    <string name="self_edit">Edit</string>

    <!-- LOVE LANGUAGES ACTIVITY STRING   -->
    <string name="title_activity_lovelanguages">LoveLanguages</string>
    <string name="love_languages">Love Languages</string>
    <string name="love_languages_are_an_important_aspect_in_relationship_knowing_your_own_love_languages_and_how_they_connect_with_you_will_make_it_easier_for_you_to_be_able_to_relay_them_to_your_significant_other">Love Languages are an important aspect in relationship. Knowing your own love languages and how they connect with you will make it easier for you to be able to relay them to your significant other.</string>
    <string name="txtLoveLanguagesIntro">To find out what your love languages are, please click the button below to be redirected to an online quiz. Once you\'re done taking the quiz come back to the app and enter your test results.</string>
    <string name="click_to_take_quiz">CLICK TO TAKE THE LOVE LANGUAGES QUIZ</string>
    <string name="upload_image">Upload Image</string>
    <string name="i_don_t_know">I  don\'t  know</string>

    <string name="title_activity_mindspace">MindSpace</string>
    <string name="title_activity_mii">Mii</string>
    <string name="title_activity_menu">Menu</string>

    <!--RECORD ACTIVITY STRINGS -->
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
    <string name="recording_title">Self Control</string>
</resources>