<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingTop="100dp"
    tools:context=".ui.MindSpaceActivity">

    <TextView
        android:id="@+id/sacredNameTxt"
        android:layout_width="198dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/amaticscbold"
        android:gravity="center"
        android:hint="@string/self_image_hint"
        android:text="@string/recording_title"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="349dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bttmNavView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/recordAudio"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:width="110dip"
                android:background="@color/black"
                android:fontFamily="@font/bilboswashcapsregular"
                android:maxWidth="120dip"
                android:minWidth="100dip"
                android:text="@string/record_video"
                android:textSize="34sp"
                app:backgroundTint="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/recordVideo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="370dp"
                android:layout_height="100dp"
                android:fontFamily="@font/bilboswashcapsregular"
                android:text="@string/record_audio"
                android:textSize="34sp"
                app:backgroundTint="@color/black" />

        </TableRow>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bttmNavView"
        android:layout_width="410dp"
        android:layout_height="62dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/black"
                android:fontFamily="@font/amaticscbold"
                android:text="@string/title_activity_menu"
                android:textSize="20sp"
                app:backgroundTint="@color/black" />

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>